[package]
name = "rust-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "client"
path = "src/client.rs"


[dependencies]
clap = { version = "3.1", features = ["derive"] }
config = "0.13"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
notify = "4.0"
prost = "0.11"
serde = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "signal",] }
tokio-stream = "0.1"
tonic = { version = "0.9", features = ["tls",] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

[build-dependencies]
tonic-build = "0.9"
